# MLOps-entregable

./: .env.example  .gitignore  InformeMLOPS.docx  README.md  cloudbuild.yaml  dockerfile  instrucciones_entregable.md  pyproject.toml
ecominsight_agent/: agent.py
ecominsight_agent/agents/: bigquery_analyst_agent.py  business_consultant_agent.py
ecominsight_agent/mcp_server/: reporting_server.py
ecominsight_agent/retrieval/: bigquery_tools.py
ecominsight_agent/supervisor/: agent.py
ecominsight_agent/tests/: test_mcp_reporting.py  test_sql_safety.py
ecominsight_agent/tests/e2e/: test_cloud_agent.py
tutorials/: __init__.py  model_config.py
